Bug 1804812 - Allow authors to override listbox select overflow styles. r=jfkthame,layout-reviewers

This matches what Chromium does, and seems generally better.

Differential Revision: https://phabricator.services.mozilla.com/D165693